--- a/src/components/PollDog.css
+++ b/src/components/PollDog.css
@@ -36,3 +36,29 @@ ul {
     margin-top: 10px;
     font-size: 1.5rem;
 }
+
+.loader-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px
+}
+
+.loader {
+    width: 48px;
+    height: 48px;
+    border: 5px solid crimson;
+    border-bottom-color: transparent;
+    border-radius: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
