--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,22 @@
 html, body {
     font-family: 'Open Sans', sans-serif;
 }
+
+.loader {
+    width: 48px;
+    height: 48px;
+    border: 5px solid crimson;
+    border-bottom-color: transparent;
+    border-radius: 50%;
+    display: inline-block;
+    animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
